2004-01-23  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (list_access_check)  Bugfix:  Arrange 
	to delete the spool file for a posted message if the only
	terminal action is "forward".

	* lib/Mj/Resend.pm:  (post)  Delete any temporary files
	(In particular, the spool file if a message was forwarded.)

2004-01-20  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (post, _post, _check_approval, do_digests)  
        Bugfix:  Record the correct interface in the log.
	Thanks to Brock Rozen.

2004-01-19  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (check_headers)  Bugfix:
	Add missing Safe compartment operations for perl 5.8.
	Thanks to Brock Rozen.

2004-01-17  Michael Yount <csf@moscow.com>

	* lib/Mj/Parser.pm:  (parse_part)  Bugfix:  fix typo
	that prevented results from being mailed to a 3d party.
	Thanks to Dean Collins.

2004-01-14  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Add support for the "default list" command.

2004-01-13  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Version number is now 0.1200401130.
	(get_all_lists, help_start)  Set the "nostall" access
	variable to avoid delays.
	(_get_stock)  Disable all warnings briefly to avoid
	perl 5.8.2 spurious warnings.  Thanks to Brock Rozen.
	(alias, createlist, et al.)  Call list_access_check
	instead of global_access_check for all GLOBAL commands
	to accommodate list admin credentials for the commands.

	* lib/Mj/Access.pm:  (list_access_check)  Support
	the list_password access variable, which will recognize
	list admin credentials used in a GLOBAL context.
	Instead of reporting an invalid password, by default
	a valid list admin password will be ignored.

	* lib/Mj/CommandProps.pm:  Add support for the "list"
	and "list_password" general access variables, and
	the "newlist" access variable for the createlist
	command.
	Bugfix:  The unsubscribe command does not support
	the "ALL" list.

	* lib/Mj/Config.pm:  (_compile_rule)  Bugfix:  Fix