@@ -1,3 +1,9 @@
+2004-01-27  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Config.pm:  (parse_keyed)  Bugfix:  Count
+	array elements before splicing them.
+	Thanks to Brock Rozen.
+
 2004-01-23  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/Access.pm:  (list_access_check)  Bugfix:  Arrange 
